--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -7,5 +8,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.4",
     "nodemon": "^3.1.10"
+  },
+  "scripts": {
+    "dev": "nodemon server.js"
   }
 }
