--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "nodemon": "^3.1.10"
   },
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+     "start": "node server.js"
   }
 }
